avoid body scrollbar

--- a/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
@@ -2,6 +2,11 @@ h1, h2, h3, h4, h5, h1 a, h2 a, h3 a, legend {
     color: $black;
 }
 
+body {
+    // HACK avoid scrollbar (no clue where that came from)
+    overflow-y: visible;
+}
+
 label {
     font-weight: normal;
 }
